#176: Harden Kerberos configuration file generation (#186)